--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-NODE_ENV=development
 PORT=3000
 JWT_SECRET=ZlBPV25wYXAtVkFJQkU1U2R0SExQMVdGdldRcFNPTG8
-MONGODB_URI=mongodb://localhost:27017/bank
+MONGODB_CNN=mongodb://localhost:27017/bank
+
+
