--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
+    "pino": "^9.2.0",
+    "pino-caller": "^3.4.0",
+    "randomatic": "^3.1.1",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "pino-pretty": "^11.2.1"
   }
 }
